App-public-subnets.yaml
Description: >
    This template creates the public Subnets for the Portals applications. 
    They are hostinging Web Application which need to be reached by external clients. 
    
Parameters:

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String
        
    PortalsSub01CIDR:
      Type: String

    PortalsSub02CIDR:
      Type: String

    PortalsSub03CIDR:
      Type: String
  
    InetGatewayId:
      Type: String
      
    VPNGatewayId:
      Type: String      
 
    SharedServicesPeeringConnectionId:
      Type: String  
    
    VPC:
      Description: Choose which VPC this ECS cluster should be deployed to
      Type: AWS::EC2::VPC::Id

Resources:
###############################################################################
# SHARED SUB 01
  PortalsSub01:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PortalsSub01CIDR
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-west-2a
      Tags:
        - Key: Name
          Value: !Sub Portals-Public-Sub01-${EnvironmentName}

        # Add Infrastructure Keys
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: ContactGroup
          Value: AWS
        - Key: ResourceOwner
          Value: SAI
        - Key: CostCenter
          Value: xx-xxx
        - Key: Customer
          Value: Portals
        - Key: Application
          Value: Portals

  PortalsSub01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref SharedSubRouteTable
      SubnetId: !Ref PortalsSub01

###############################################################################
# SHARED SUB 02
  PortalsSub02:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PortalsSub02CIDR
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-west-2b
      Tags:
        - Key: Name
          Value: !Sub Portals-Public-Sub01-${EnvironmentName}

        # Add Infrastructure Keys
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: ContactGroup
          Value: AWS
        - Key: ResourceOwner
          Value: SAI
        - Key: CostCenter
          Value: xx-xxx
        - Key: Customer
          Value: Portals
        - Key: Application
          Value: Portals

  PortalsSub02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref SharedSubRouteTable
      SubnetId: !Ref PortalsSub02

###############################################################################
# SHARED SUB 03
  PortalsSub01:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref PortalsSub03CIDR
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-west-2c
      Tags:
        - Key: Name
          Value: !Sub Portals-Public-Sub01-${EnvironmentName}

        # Add Infrastructure Keys
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: ContactGroup
          Value: AWS
        - Key: ResourceOwner
          Value: SAI
        - Key: CostCenter
          Value: xx-xxx
        - Key: Customer
          Value: Portals
        - Key: Application
          Value: Portals

  PortalsSub03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref SharedSubRouteTable
      SubnetId: !Ref PortalsSub03

###############################################################################
# ROUTE TABLE
  SharedSubRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub Portals-Public-Sub01-${EnvironmentName}

        # Add Infrastructure Keys
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: ContactGroup
          Value: AWS
        - Key: ResourceOwner
          Value: SAI
        - Key: CostCenter
          Value: xx-xxx
        - Key: Customer
          Value: Portals
        - Key: Application
          Value: Portals

  SharedDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InetGatewayId
      RouteTableId: !Ref SharedSubRouteTable
      
  ServicesPeeringRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 10.128.0.0/16
      VpcPeeringConnectionId: !Ref SharedServicesPeeringConnectionId
      RouteTableId: !Ref SharedSubRouteTable
      
  RouteTablePropogation:   
    Type: AWS::EC2::VPNGatewayRoutePropagation 
    Properties: 
      RouteTableIds:
        - !Ref SharedSubRouteTable
      VpnGatewayId: !Ref VPNGatewayId        


###############################################################################
# Outputs
Outputs:
    PortalsPublicSub01:
      Value: !Ref PortalsSub01

    PortalsPublicSub02:
      Value: !Ref PortalsSub02

    PortalsPublicSub03:
      Value: !Ref PortalsSub03

    PublicSubnets:
        Description: A list of the public subnets
        Value: !Join [ ",", [ !Ref PortalsSub01, !Ref PortalsSub02, !Ref PortalsSub03]]
        Export: 
          Name: !Sub PortalsPublicSubnets-${EnvironmentName}
